# dr-bottleneck

./: .gitignore  MONGODB_QUICKSTART.md  README.md  pyproject.toml
configs/workflows/: humaneval_encode_decode.yaml  two_step_random.yaml
nbs/: hello_world.py
scripts/: drain_dump.py  hello_world.py  preview_humaneval_prompts.py  query_provider.py  run_humaneval_demo.py  run_openrouter_live.sh  run_stage_workers.py  run_two_step_demo.py
src/dr_bottleneck/: __init__.py  job.py
src/dr_bottleneck/analysis/: __init__.py  metrics.py  overlap.py  report.py
src/dr_bottleneck/candidate_eval/: __init__.py  evaluator.py  models.py  worker.py
src/dr_bottleneck/cli/: __init__.py  stage_worker.py
src/dr_bottleneck/experiments/: __init__.py  humaneval.py  humaneval_context.py
src/dr_bottleneck/handlers/: __init__.py  queue.py  registry.py
src/dr_bottleneck/llm/: __init__.py  client.py  openrouter.py
src/dr_bottleneck/runtime/: __init__.py  manifest.py  runner.py
src/dr_bottleneck/storage/: __init__.py  inspect.py  llm_calls.py  metrics.py  mongo.py  reports.py
src/dr_bottleneck/workflow/: __init__.py  config.py  engine.py
src/dr_bottleneck/workflow_jobs/: __init__.py  runtime.py  spec.py  worker.py
src/dr_providers/: __init__.py  client.py  openrouter.py  record.py
src/dr_queues/: __init__.py  analyze.py  connection.py  drain.py  humaneval_data.py  job.py  manifest.py  metrics_report.py  models.py  process_handlers.py  queues.py  report.py  runner.py  seed.py  tap.py  utils.py  workers.py  workflow.py
tests/: test_client.py  test_job_adapter.py  test_metrics.py  test_mongo_inspect.py  test_mongo_storage.py  test_openrouter.py  test_profiles.py  test_record.py  test_workflow_jobs.py
