[project]
name = "dr-bottleneck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "litellm>=1.89.3",
    "marimo[recommended]>=0.23.10",
    "pika>=1.4.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
include = ["scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "DTZ",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PIE",
    "PTH",
    "PT",
    "RET",
    "RSE",
    "RUF",
    "SLOT",
    "T10",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ty.src]
include = ["scripts", "src"]
exclude = ["nbs", "tests"]
