[project]
name = "dr-bottleneck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dr-code",
    "dr-providers>=0.1.0",
    "dr-queues>=0.1.4",
    "marimo[recommended]>=0.23.10",
    "pydantic>=2.13.4",
    "pymongo>=4.16.0",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_bottleneck"]

[tool.uv.sources]
dr-code = { path = "../dr-code", editable = true }
dr-providers = { path = "../dr-providers", editable = true }

# code-eval pins ruff==0.8.4 for subprocess normalizers; dr-bottleneck dev
# checks need the current shared ruff version.
[tool.uv]
override-dependencies = ["ruff>=0.15.18"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
include = ["scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "DTZ",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PIE",
    "PTH",
    "PT",
    "RET",
    "RSE",
    "RUF",
    "SLOT",
    "T10",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ty.src]
include = ["scripts", "src"]
exclude = ["nbs", "tests"]
